--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,28 +1,32 @@
+<!-- Se crea un contenedor de la vista de loguin que será en forma de Columna -->
 <div class="container" fxLayout fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="60px" fxLayoutGap.xs="0">
-    <!-- <div class="item item-1" fxFlex="80%" fxFlexOrder="1" fxLayout="column" fxLayoutGap="10px">
-        <mat-card>
-        </mat-card>
-    </div> -->
+
+    <!-- Se crea una card centrada y que contiene un formulario de logueo -->
     <div  fxLayoutAlign="center center" fxFlexOrder="2" fxLayout="column" fxLayoutGap="10px">
         <mat-card>
-            <!-- <img mat-card-image class="login-logo" src="/assets/img/wagner-logo.jpg"> -->
             <mat-toolbar>
                 <span>LOGIN</span>
             </mat-toolbar>
             <mat-card-content class="center">
+                <!-- Se crea un Formulario de logueo, el cual al presionar submit enviara los datos -->
                 <form (ngSubmit)="submit(loginForm.value)" [formGroup]="loginForm">
+
+                    <!-- Fila de loguin -->
                     <div class="row">
                         <mat-form-field appearance="outline">
                             <mat-label>Email</mat-label>
                             <input matInput formControlName="email" required>
                         </mat-form-field>
                     </div>
+
+                    <!-- Fila de password -->
                     <div class="row">
                         <mat-form-field appearance="outline">
                             <mat-label>Password</mat-label>
                             <input matInput type="password" formControlName="password" required>
                         </mat-form-field>
                     </div>
+                    <!-- Botón que gatilla el submit del formulario -->
                     <div class="row center">
                         <button mat-raised-button type="submit" color="primary">Login</button>
                     </div>
